# src/controllers/auth.controller.ts
@@ -28,7 +28,21 @@ const registerValidationSchema = Yup.object({
     .required("Email is required"),
   password: Yup.string()
     .required("Password is required")
-    .min(8, "Password must be at least 8 characters long"),
+    .min(8, "Password must be at least 8 characters long")
+    .test(
+      "uppercase",
+      "Password must contain at least one uppercase letter",
+      (value) => {
+        if (!value) return false;
+        const regex = /^(?=.*[A-Z])/;
+        return regex.test(value);
+      }
+    )
+    .test("number", "Password must contain at least one number", (value) => {
+      if (!value) return false;
+      const regex = /^(?=.*\d)/;
+      return regex.test(value);
+    }),
   confirmPassword: Yup.string()
     .required("Confirm password is required")
     .oneOf([Yup.ref("password"), ""], "Password not match"),
@@ -37,16 +51,16 @@ const registerValidationSchema = Yup.object({
 export default {
   async register(req: Request, res: Response) {
     /**
+     #swagger.tags = ["Auth"]
      #swagger.requestBody = {
        required: true,
        schema: {$ref: "#/components/schemas/RegisterRequest"}
      }
     */
-
-    const { fullName, userName, email, password, confirmPassword } =
-      req.body as unknown as TRegister;
-
     try {
+      const { fullName, userName, email, password, confirmPassword } =
+        req.body as unknown as TRegister;
+
       await registerValidationSchema.validate({
         fullName,
         userName,
@@ -87,14 +101,15 @@ export default {
 
   async login(req: Request, res: Response) {
     /**
+     #swagger.tags = ["Auth"]
      #swagger.requestBody = {
        required: true,
        schema: {$ref: "#/components/schemas/LoginRequest"}
      }
     */
-    const { identifier, password } = req.body as unknown as TLogin;
-
     try {
+      const { identifier, password } = req.body as unknown as TLogin;
+
       const userByIdentifier = await UserModel.findOne({
         $or: [{ email: identifier }, { userName: identifier }],
       });
@@ -130,6 +145,7 @@ export default {
 
   async me(req: IReqUser, res: Response) {
     /**
+     #swagger.tags = ["Auth"]
      #swagger.security = [{
         "bearerAuth": []
      }]
@@ -146,6 +162,41 @@ export default {
       res.status(200).json({
         message: "Success get user profile",
         data: result,
+      });
+    } catch (error) {
+      const err = error as unknown as Error;
+      res.status(400).json({
+        message: err.message,
+        data: null,
+      });
+    }
+  },
+
+  async activation(req: Request, res: Response) {
+    /**
+     #swagger.tags = ["Auth"]
+     #swagger.requestBody = {
+       required: true,
+       schema: {$ref: "#/components/schemas/ActivationRequest"}
+     }
+    */
+    try {
+      const { code } = req.body as unknown as { code: string };
+
+      const user = await UserModel.findOneAndUpdate(
+        {
+          activationCode: code,
+        },
+        {
+          isActive: true,
+        },
+        {
+          new: true,
+        }
+      );
+      res.status(200).json({
+        message: "User activated successfully",
+        data: user,
       });
     } catch (error) {
       const err = error as unknown as Error;
